# pkg/handler/auth.go
@@ -11,18 +11,18 @@ type signInInput struct {
 	Password string `json:"password" binding:"required"`
 }
 
-// @Summary SignUpClient
-// @Tags auth
-// @Description Создание и регистрация клиента
-// @ID create-client
-// @Accept json
-// @Produce json
-// @Param input body internal_types.SignUpClient true "Данные для создания клиента"
-// @Success 200 {integer} integer 1
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /auth/sign-up-client [post]
+// @Summary		SignUpClient
+// @Tags			auth
+// @Description	Создание и регистрация клиента
+// @ID				create-client
+// @Accept			json
+// @Produce		json
+// @Param			input	body		internal_types.SignUpClient	true	"Данные для создания клиента"
+// @Success		200		{integer}	integer						1
+// @Failure		400,404	{object}	errorResponse
+// @Failure		500		{object}	errorResponse
+// @Failure		default	{object}	errorResponse
+// @Router			/auth/sign-up-client [post]
 func (h *Handler) signUpClient(ctx *gin.Context) {
 	var input internal_types.SignUpClient
 
@@ -42,18 +42,18 @@ func (h *Handler) signUpClient(ctx *gin.Context) {
 	})
 }
 
-// @Summary SignUpManager
-// @Tags auth
-// @Description Создание и регистрация менеджера
-// @ID create-manager
-// @Accept json
-// @Produce json
-// @Param input body internal_types.SignUpClient true "Данные для создания менеджера"
-// @Success 200 {integer} integer 1
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /auth/sign-up-manager [post]
+// @Summary		SignUpManager
+// @Tags			auth
+// @Description	Создание и регистрация менеджера
+// @ID				create-manager
+// @Accept			json
+// @Produce		json
+// @Param			input	body		internal_types.ManagerAccount	true	"Данные для создания менеджера"
+// @Success		200		{integer}	integer							1
+// @Failure		400,404	{object}	errorResponse
+// @Failure		500		{object}	errorResponse
+// @Failure		default	{object}	errorResponse
+// @Router			/auth/sign-up-manager [post]
 func (h *Handler) signUpManager(ctx *gin.Context) {
 	var input internal_types.ManagerAccount
 
@@ -73,18 +73,18 @@ func (h *Handler) signUpManager(ctx *gin.Context) {
 	})
 }
 
-// @Summary SignIn
-// @Tags auth
-// @Description Получение jwt токена
-// @ID sign-in
-// @Accept json
-// @Produce json
-// @Param input body signInInput true "Данные для авторизации"
-// @Success 200 {string} string "token"
-// @Failure 400,404 {object} errorResponse
-// @Failure 500 {object} errorResponse
-// @Failure default {object} errorResponse
-// @Router /auth/sign-in [post]
+// @Summary		SignIn
+// @Tags			auth
+// @Description	Получение jwt токена
+// @ID				sign-in
+// @Accept			json
+// @Produce		json
+// @Param			input	body		signInInput	true	"Данные для авторизации"
+// @Success		200		{string}	string		"token"
+// @Failure		400,404	{object}	errorResponse
+// @Failure		500		{object}	errorResponse
+// @Failure		default	{object}	errorResponse
+// @Router			/auth/sign-in [post]
 func (h *Handler) signIn(ctx *gin.Context) {
 	var input signInInput
 
